added code from hw11

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-js-hw-12</title>
+    <title>goit-js-hw-11</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <form class="form">
+      <input
+        type="text"
+        class="input"
+        name="input"
+        placeholder="Search images"
+      />
+      <button type="submit" class="search-btn">Search</button>
+    </form>
+    <ul class="gallery"></ul>
+    <p class="preload loader is-hidden"></p>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
