coded a litle bit

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,10 @@
       <button type="submit" class="search-btn">Search</button>
     </form>
     <ul class="gallery"></ul>
-    <p class="preload loader is-hidden"></p>
+    <p class="loader is-hidden"></p>
+    <button type="submit" id="next-btn" class="search-btn is-hidden">
+      Load more
+    </button>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
