--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     </form>
     <ul class="gallery"></ul>
     <p class="loader is-hidden"></p>
-    <button type="submit" id="next-btn" class="search-btn is-hidden">
+    <button type="submit" id="next-btn" class="next-btn is-hidden">
       Load more
     </button>
     <script type="module" src="./main.js"></script>
