added some styles

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <h1 class="visually-hidden">App for searching images</h1>
     <form class="form">
       <input
         type="text"
